--- a/client/src/styles/fillform.css
+++ b/client/src/styles/fillform.css
@@ -86,9 +86,9 @@
   height: 200px;
   width: 100%;
   border-radius: 5px;
-  background-color: #262626;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #a3a3a3;
+  border: 3px dashed #262626;
 }
