--- a/client/src/styles/fillform.css
+++ b/client/src/styles/fillform.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 
 .step-indicator {
@@ -48,30 +48,12 @@
   background-color: #007bff;
 }
 
-/* @media (max-width: 600px) {
-  .form-row {
-    flex-direction: column;
-  }
-
-  input[type="text"],
-  input[type="date"],
-  input[type="tel"],
-  input[type="file"] {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-} */
-.form_container {
-  /* max-width: 500px; */
-}
-
 .date_picker {
   background-color: #0a0a0a;
   padding: 10px 10px;
   border-radius: 5px;
   font-size: 0.875rem;
-  outline: #262626;
-  color: #a3a3a3;
+  border: 1px solid #262626;
   color-scheme: dark;
 }
 
@@ -91,4 +73,10 @@
   justify-content: center;
   color: #a3a3a3;
   border: 3px dashed #262626;
+}
+.ddd {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
 }
