small changes in the camera component

--- a/client/src/styles/fillform.css
+++ b/client/src/styles/fillform.css
@@ -74,7 +74,7 @@
   color: #a3a3a3;
   border: 3px dashed #262626;
 }
-.ddd {
+.main_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
